--- a/src/Lib.Tests/Lib.Tests.csproj
+++ b/src/Lib.Tests/Lib.Tests.csproj
@@ -64,7 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FooTests.cs" />
+    <Compile Include="Tests.cs" />
     <Compile Include="LoggingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
